# trl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
trl/: __main__.py  cli.py  replay_buffer.py
trl/data/: dataset.py  vocab.py
trl/generation/: sampler.py
trl/model/: attention.py  positional.py  transformer.py  value_head.py
trl/objectives/: base.py  pareto.py
trl/training/: auto_config.py  pretrain.py  rl_train.py  utils.py
