[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trl"
version = "0.1.0"
description = "Token-sequence Model + Reinforcement Learning"
authors = [{ name = "Harry Stern" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "numpy",
    "typer[all]>=0.9",
    "wandb",
    "scipy",
]

[project.optional-dependencies]
flash = ["flash-attn>=2.3"]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3",
    "pre-commit>=4",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
trl = "trl.cli:app"

[tool.setuptools]
packages = { find = { include = ["trl", "trl.*"] } }

[tool.ruff]
target-version = "py311"
line-length = 100
lint.select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["trl"]

[tool.mypy]
python_version = "3.11"
packages = ["trl"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["gpu: requires GPU"]
